test_suite/tests/compile_fail/fail_enum.rs

#[derive(serde_unstructured::SerdeView)]
enum Data {
    Variant,
}

fn main() {}